fix: shift vivaldi's status bar left 2 pixels
Prevent overflow of the clock over the webview container

--- a/vivaldi/custom.css
+++ b/vivaldi/custom.css
@@ -60,7 +60,7 @@ div#tabs-container {
 .toolbar-statusbar {
     position: absolute;
     bottom: 0;
-    left: 58px;
+    left: 56px;
     min-height: 30px;
 }
 .toolbar-statusbar .button-toolbar {
